REGRESSION(r268176): [GStreamer] media/video-orientation-canvas.html fails https://bugs.webkit.org/show_bug.cgi?id=223850

Reviewed by Carlos Alberto Lopez Perez.

Source/WebCore:

The GL pipeline used by the player is now able to handle image rotation tags itself. Manual
handling of the image rotation tags is now performed only when the pipeline is not able to
do it by itself.

* platform/graphics/gstreamer/GLVideoSinkGStreamer.cpp:
(webKitGLVideoSinkConstructed):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):
(WebCore::getVideoOrientation):
(WebCore::MediaPlayerPrivateGStreamer::updateVideoSizeAndOrientationFromCaps):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

LayoutTests:

* platform/gtk/TestExpectations: Unflag now-passing test.

Canonical link: https://commits.webkit.org/236075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275412 268f45cc-cd09-0410-ab3c-d52691b4dbfc